# landslide

./: .gitignore  dvc.yaml  pyproject.toml  readme.md
landslide/: data.py  losses.py  metrics.py  torch.py  trackers.py  trainer.py  utils.py
landslide/losses/: __init__.py  common.py  dice.py  focal.py  lovasz_hinge.py
landslide/model/: __init__.py  segformer.py  unet.py
notebooks/: plotting_dataset.ipynb  segformer_implementation.ipynb
scripts/: data_prepare_L4S.py  data_prepare_config.py  data_prepare_png.py  data_prepare_split.py  model_train.py  test_dataloader.py  train.py  train_original.py  train_unet_w_bce.py  trainer.py
