[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "landslide"
version = "0.0.1"
description = "Lumita supervision library"
authors = [
  { name = "Gianluca Calò" },
]

readme = "readme.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["landslide"]
force-sort-within-sections = true

